# cow

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  cow.hpp
.github/workflows/: ci.yml
include/: cow.hpp
include/cow/: unbox.hpp  value.hpp  version.hpp
include/cow/detail/: proxy.hpp  traits.hpp
test/: CMakeLists.txt
test/coverage/: CMakeLists.txt
test/deployment/: CMakeLists.txt
test/formatting/: CMakeLists.txt
test/header/: CMakeLists.txt
test/linking/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/include/: test.hpp
test/unit/src/cow/: unbox.cpp  value.cpp  version.cpp
test/unit/src/cow/value/: assignable.cpp  constructible.cpp  convertible.cpp
